[tool.poetry]
name = ""
version = "0.0.1"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
doit = "*"
faker = "*"
mypy = "*"
pylint = "*"
black = "*"
pytest = "*"
pytest-pythonpath = "*"
shiv = "*"
ipdb = "*"
rich = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"
python_paths = "."
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
atomic = true
float_to_top = true
multi_line_output = 3
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = [ # https://docs.pylint.org/en/v2.11.1/technical_reference/features.html
    "format", # handled by black
    "miscellaneous", # accept TODO
    "empty-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
