[project]
name = "kresus"
version = "0.1.0"
description = ""
dependencies = ["environs", "pydantic"]

[project.optional-dependencies]
dev = ["mypy", "pylint", "black", "pip-tools", "doit"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.isort]
profile = "black"
atomic = true
float_to_top = true
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "format",
    "miscellaneous",
    "empty-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
